[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/Game_Manager.gd" type="Script" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_control/Level_Changer.tscn" type="PackedScene" id=3]

[node name="Game_Manager" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Level_Changer" parent="." instance=ExtResource( 3 )]

[connection signal="level_change_complete" from="Level_Changer" to="." method="_on_Level_Changer_level_change_complete"]
[connection signal="level_changing" from="Level_Changer" to="." method="_on_Level_Changer_level_changing"]
[connection signal="loading_next_level" from="Level_Changer" to="." method="_on_Level_Changer_loading_next_level"]
